--- a/src/components/styles/employeeList.css
+++ b/src/components/styles/employeeList.css
@@ -48,6 +48,9 @@
 }
 
 @media only screen and (max-width: 480px) {
+  #employeesList {
+    min-height: 20vh;
+  }
   #employeesList thead {
     font-size: 15px;
     font-weight: 300;
