--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   /* -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 input,
 select,
